2005-12-19  Roman Kennke  <kennke@aicas.com>

	PR classpath/24195
	* javax/swing/text/DefaultStyledDocument.java
	(setParagraphAttributes): Obtain lock for this operation. Exit loop
	after last paragraph element.

2005-12-19  Roman Kennke  <kennke@aicas.com>

	* javax/swing/plaf/basic/BasicComboBoxUI.java
	(installListeners): Install focus listener only on editor.
	(configureArrowButton): Make arrow button not focusable.
	(setPopupVisible): Request focus for the combobox editor or comboBox,
	depending on whether the combobox is editable or not.
	* javax/swing/plaf/basic/BasicComboPopup.java
	(configureList): Make list not focusable.
	
2005-12-19  Wolfgang Baer  <WBaer@gmx.de>

	* javax/print/attribute/standard/JobStateReasons.java: 
	Added and updated javadocs to class and methods.
	(JobStateReasons): New constructor.
	(JobStateReasons): Likewise.
	(JobStateReasons): Likewise.
	(JobStateReasons): Likewise.
	(add): New overridden method.
	* javax/print/attribute/standard/PrinterStateReasons.java:
	Added and updated javadocs to class and methods.
	(PrinterStateReasons): New constructor.
	(PrinterStateReasons): Likewise.
	(PrinterStateReasons): Likewise.
	(PrinterStateReasons): Likewise.
	(printerStateReasonSet): New method.
	(put): New overridden method.	

2005-12-18  Guilhem Lavaux  <guilhem@kaffe.org>

	* libraries/javalib/external/classpath/lib/Makefile.am:
	Replaced $(top_distdir) with $(distdir)/.. to make sure
	that GNU Classpath's class library sources don't end up
	in the wrong location in kaffe's tarball.

2005-12-18  Nicolas Geoffray <nicolas.geoffray@menlina.com>

	* java/lang/Class.java (getModifiers): Only returns
	interesting bits. 

2005-12-18  Chris Burdess  <dog@gnu.org>

	* gnu/xml/stream/SAXParser.java,
	  gnu/xml/stream/XMLParser.java: Various fixes post SAX conformance
	testing.

2005-12-18  Wolfgang Baer  <WBaer@gmx.de>

	* javax/print/attribute/standard/JobOriginatingUserName.java,
	* javax/print/attribute/standard/RequestingUserName.java,